--- a/public/views/shavePlans/shavePlans.html
+++ b/public/views/shavePlans/shavePlans.html
@@ -1,8 +1,112 @@
-<section class="hero">
+<section class="shaveplan-main">
   <p>Subscribe to a</p>
   <h1>Shave Plan</h1>
   <p> Get Harry's delivered to your door for less
     <br>than $2 per blade. Start with a free trial, just
-    <br>cover shipping. </p>
-  <a>start trial</a>
+    <br>cover shipping.
+  </p>
+  <start-trial-dir></start-trial-dir>
+</section>
+
+<section class="descriptions">
+  <div>
+    <h5>Start for free.</h5>
+    <p>Start shaving with our products –
+      <br>it’s free, just cover shipping.</p>
+  </div>
+  <div>
+    <h5>Save every time.</h5>
+    <p>Save on all your shaving products
+      <br>without sacrificing quality.</p>
+  </div>
+  <div>
+    <h5>You’re in control.</h5>
+    <p>You can modify or cancel your
+      <br> plan from your profile page.</p>
+  </div>
+</section>
+
+<section class="works">
+  <h1>What you get on a Shave Plan</h1>
+  <div class="works-card">
+    <h6>Ships Today</h6>
+    <h3>Try for Free</h3>
+    <img src="./images/shaveplans/product-card-trial-6198e1b87b6bf947d1d10d46f53ecf7d1fc1c7046ef64db68e7eec10fa19e28b.jpg" alt="works-card">
+    <h6>Free Trial Set
+    <br>Just cover $3 US Shipping</h6>
+    <p>Judge the quality of our products for
+      <br>yourself. Trial lasts about 2 weeks.</p>
+  </div>
+  <div class="works-card">
+    <h6>Ships Today</h6>
+    <h3>Try for Free</h3>
+    <img src="./images/shaveplans/product-card-trial-6198e1b87b6bf947d1d10d46f53ecf7d1fc1c7046ef64db68e7eec10fa19e28b.jpg" alt="works-card">
+    <h6>Free Trial Set
+    <br>Just cover $3 US Shipping</h6>
+    <p>Judge the quality of our products for
+      <br>yourself. Trial lasts about 2 weeks.</p>
+  </div>
+  <start-trial-dir></start-trial-dir>
+</section>
+
+<section class="engineer">
+  <div class="engineer-container">
+    <h2>Engineered for
+    <br>quality and comfort.</h2>
+    <ul>
+      <li>
+        Precision-honed edges
+      </li>
+      <li>
+        Hinged cartridge for flexibility and control
+      </li>
+      <li>
+        Delivers a crisp, comfortable shave
+      </li>
+    </ul>
+    <start-trial-dir></start-trial-dir>
+  </div>
+</section>
+
+<section class="quality">
+  <div class="quality-container">
+    <h2>Quality blades for half the price.</h2>
+    <p>We sell our blades to you directly from our
+      <br>factory in Germany. No middlemen, no
+      <br>upcharges. That's the Harry's way.
+    </p>
+    <start-trial-dir></start-trial-dir>
+  </div>
+</section>
+
+<section class="made-factory">
+  <div class="made-factory-container">
+    <h2>Made at our
+    <br>German factory</h2>
+    <p>Today, more than four hundred German
+      <br>engineers, designers, and production workers
+      <br>build and operate sophisticated equipment that
+      <br>produces millions of precision-honed blades
+      <br>per year.
+    </p>
+    <a>see our factory</a>
+  </div>
+</section>
+
+<section class="different">
+  <ul>
+    <li>
+      <h6>Looking for something different?</h6>
+    </li>
+    <li><a>
+      <span>Custom subscription
+        <br>without a trial</span>
+        <span></span>
+    </a></li>
+    <li><a>
+      <span>Shop Harry's without
+        <br>a subscription</span>
+        <span></span>
+    </a></li>
+  </ul>
 </section>
