--- a/public/views/signIn/signIn.html
+++ b/public/views/signIn/signIn.html
@@ -1,6 +1,42 @@
-<div>
-  <span>create account</span>
-  <input type="email">
-  <a>create account</a>
-  <a>sign in with facebook</a>
+<div class="signin-wrapper">
+  <div class="create-account">
+    <form>
+      <h3>Create Account</h3>
+      <input type="email" placeholder="Email Address">
+      <div class="new-cus">
+        <span class="on-focus"></span>
+        <span class="on-focus-text"> new customers</span>
+        <p>Create an account with us for quick
+          <br>checkout, to keep track of your order,
+          <br>and more.</p>
+      </div>
+      <div class="return-cus">
+        <span class="on-blur"></span>
+        <span class="on-blur-text"></span>
+      </div>
+      <input type="password">
+      <p>Minimum 8 characters</p>
+      <input type="submit" value="create account">
+      <a>Sign in with Facebook</a>
+    </form>
+  </div>
+  <div class="create-account">
+    <form>
+      <h3>Sign In</h3>
+      <input type="email" placeholder="Email Address">
+      <div class="new-cus">
+        <span class="on-blur"></span>
+        <span class="on-blur-text"> new customers</span>
+      </div>
+      <div class="return-cus">
+        <span class="on-focus"></span>
+        <span class="on-focus-text"></span>
+      </div>
+      <input type="password">
+      <p>Minimum 8 characters</p>
+      <input type="submit" value="sign in">
+      <a>Sign in with Facebook</a>
+      <a>forgot password?</a>
+    </form>
+  </div>
 </div>
