--- a/public/directives/nav/nav.scss
+++ b/public/directives/nav/nav.scss
@@ -1,6 +1,47 @@
 $nav-text: rgb(142, 143, 142);
 
-ul {
+nav > ul {
+  list-style-type: none;
   color: $nav-text;
   display: flex;
+  padding: 22px 0;
+  margin: 0;
+  li {
+    margin: 0 20px;
+    height: 22px;
+    a {
+      text-decoration: none;
+      color: $nav-text;
+      font-size: 14px;
+      text-transform: uppercase;
+      font-weight: 700;
+      line-height: 22px;
+    }
+  }
+}
+.home a {
+  background: url("./../../images/home/nav_sprite.png") no-repeat 0 -15px;
+  width: 120px;
+  height: 22px;
+  display: block;
+}
+
+.nav-left {
+  float: left;
+  display: flex;
+}
+.nav-right {
+  float: right;
+  display: flex
+}
+.cart-icon {
+  background: url("./../../images/home/nav_sprite.png") no-repeat -450px 0;
+  height: 40px;
+  width: 50px;
+  display: inline-block;
+  float: right;
+  margin-top: -20px;
+}
+.clear {
+  clear: both;
 }
