--- a/public/views/signIn/signIn.html
+++ b/public/views/signIn/signIn.html
@@ -23,7 +23,7 @@
   <div class="create-account">
     <form>
       <h3>Sign In</h3>
-      <input type="email" placeholder="Email Address">
+      <input type="email" placeholder="Email Address" ng-model="signInEmail">
       <div class="new-cus">
         <span class="on-blur"></span>
         <span class="on-blur-text"> new customers</span>
@@ -32,9 +32,9 @@
         <span class="on-focus"></span>
         <span class="on-focus-text"></span>
       </div>
-      <input type="password">
+      <input type="password" ng-model="signInPassword">
       <p>Minimum 8 characters</p>
-      <input type="submit" value="sign in">
+      <input type="submit" value="sign in" ng-click="login()">
       <a>Sign in with Facebook</a>
       <a>forgot password?</a>
     </form>
