--- a/public/views/products/singleProduct.html
+++ b/public/views/products/singleProduct.html
@@ -24,11 +24,29 @@
         <color-circle-dir></color-circle-dir>
       </div>
       <size-dir></size-dir>
-      <quantity-dir></quantity-dir>
+      <quantity-dir quantity="quantity" add-quantity="addQuantity()" minus-quantity="minusQuantity()"></quantity-dir>
       <add-to-cart-dir></add-to-cart-dir>
     </div>
   </section>
   <section class="product-feature">
-
+    <div class="feature" ng-repeat="feature in features">
+      <div class="feature-img">
+        <img ng-src="{{feature.img_url}}" alt="img_url">
+      </div>
+      <div class="feature-text">
+        <h3>{{feature.title}}</h3>
+        <p>{{feature.text}}</p>
+      </div>
+    </div>
+  </section>
+  <section class="product-details">
+    <div class="product-desc">
+      <p>description</p>
+      <p>{{data.description}}</p>
+    </div>
+    <div class="product-shipping">
+      <p>shipping</p>
+      <p>Orders over $10 ship free in the U.S. Expedited shipping options available at checkout.</p>
+    </div>
   </section>
 </div>
