--- a/public/views/home/home.html
+++ b/public/views/home/home.html
@@ -5,7 +5,6 @@
         <h3>Try the shaving company
         <br>that's fixing shaving.</h3>
         <p>Start a free trial, just cover shipping.</p>
-        <start-trial-dir></start-trial-dir>
       </div>
     </a>
   </section>
@@ -58,22 +57,21 @@
     </div>
   </section>
   <section class="second-hero">
-    <a>
+    <a class="text1">
       <div class="second-hero-text">
         <h4>Looking to save
         <br>even more?
         <br>Check out our
         <br>Shave Plans.</h4>
-        <p>Try For Free</p>
       </div>
     </a>
-    <a>
+    <a class="text2" ui-sref="products">
       <div class="second-hero-text">
-        <h4>Looking to save
-        <br>even more?
-        <br>Check out our
-        <br>Shave Plans.</h4>
-        <p>Try For Free</p>
+        <h4>Make it Personal</h4>
+        <p>Engrave your Winston Handle
+        <br>with up to 3 letters for a
+        <br>more personal touch.</p>
+        <p>SHOP NOW</p>
       </div>
     </a>
   </section>
