--- a/public/directives/colorCircle/colorCircle.css
+++ b/public/directives/colorCircle/colorCircle.css
@@ -13,7 +13,7 @@
   width: 26px;
   border-radius: 50%;
   text-align: center;
-  border: 1px solid white;
+  border: 1px solid rgba(0, 0, 0, 0);
 }
 
 .circles ul li:hover {
