finish cart styling and login styling

--- a/public/views/home/home.scss
+++ b/public/views/home/home.scss
@@ -69,6 +69,7 @@ body {
   background: url("https://s3.amazonaws.com/harrypics/products/products/08bdd2e97f4b4cf081fa8a41be1cec9dfdcf3b7e.jpg") no-repeat;
   color: white;
   cursor: pointer;
+  text-decoration: none;
 }
 .second-hero-text {
   padding: 150px 250px 150px 50px;
