--- a/public/directives/footer/footer.scss
+++ b/public/directives/footer/footer.scss
@@ -15,7 +15,7 @@
     ul {
       display: flex;
       list-style-type: none;
-      padding: 30px 0;
+      padding-top: 30px;
       li {
         width: 100px;
         a {
@@ -27,7 +27,7 @@
     ul.social {
       display: flex;
       list-style-type: none;
-      padding: 30px 0;
+      padding-top: 30px;
 
       li {
         width: 20px;
