--- a/public/directives/nav/nav.scss
+++ b/public/directives/nav/nav.scss
@@ -1,5 +1,8 @@
 $nav-text: rgb(142, 143, 142);
-
+nav {
+  height: 66px;
+  border-bottom: 0.8px solid #BFBFBF;
+}
 nav > ul {
   list-style-type: none;
   color: $nav-text;
@@ -9,6 +12,7 @@ nav > ul {
   li {
     margin: 0 20px;
     height: 22px;
+    cursor: pointer;
     a {
       text-decoration: none;
       color: $nav-text;
