--- a/public/views/cart/cart.html
+++ b/public/views/cart/cart.html
@@ -2,7 +2,7 @@
   <section class="cart-header">
     <h2>your cart</h2>
     <a ui-sref="products">continue shopping</a>
-    <a ng-click="checkSignIn()">checkout</a>
+    <div><button ng-click="checkSignIn()">checkout</button></div>
   </section>
 
   <section class="cart-main">
@@ -19,16 +19,20 @@
         <ul>
           <li><img ng-src="{{product.img_url}}" alt="img_url"></li>
           <li>{{product.name}}</li>
-          <li>{{product.price}}</li>
+          <li>${{product.price}}</li>
           <li>
             <quantity-dir quantity="product.quantity" add-quantity="addQuantity(product.img_url)" minus-quantity="minusQuantity(product.img_url, product.quantity)"></quantity-dir>
-            <a ng-click="removeQuantity(product.img_url)">X</a>
           </li>
-          <li>{{product.total}}</li>
+          <li>
+            ${{product.total}}
+            <a ng-click="removeQuantity(product.img_url)" class="remove">x</a>
+          </li>
         </ul>
       </div>
-      <p>subtotal {{subtotal}}</p>
-      <a ng-click="checkSignIn()">checkout</a>
+      <p>subtotal <span>${{subtotal}}.00</span></p>
+      <div>
+        <button ng-click="checkSignIn()">checkout</button>
+      </div>
     </div>
   </section>
 </div>
