--- a/public/directives/nav/nav.scss
+++ b/public/directives/nav/nav.scss
@@ -45,6 +45,19 @@ nav > ul {
   display: inline-block;
   float: right;
   margin-top: -20px;
+  position: relative;
+}
+.cart-items {
+  background: #E34F30;
+  height: 22px;
+  width: 22px;
+  border-radius: 50%;
+  color: white;
+  font-size: 90%;
+  text-align: center;
+  position: absolute;
+  top: 5px;
+  left: 50%;
 }
 .clear {
   clear: both;
