--- a/public/views/shipping/shipping.html
+++ b/public/views/shipping/shipping.html
@@ -11,15 +11,15 @@
   <h2>Checkout</h2>
   <p>shipping address</p>
   <div class="shipping-details">
-    <form>
-      <div><input type="text" placeholder="Full Name"></div>
+    <form ng-submit="toPayment()">
+      <div><input type="text" placeholder="Full Name" required></div>
       <div class="twoColumns">
-        <input type="text" placeholder="Address">
+        <input type="text" placeholder="Address" required>
         <input type="text" placeholder="Apt / Suite #">
       </div>
       <div class="threeColumns">
-      <input type="text" placeholder="City">
-      <select name="state">
+      <input type="text" placeholder="City" required>
+      <select name="state" required>
         <option value="" disabled="" selected="">State</option>
               <option value="AL">AL</option>
               <option value="AK">AK</option>
@@ -81,9 +81,10 @@
               <option value="AE">AE</option>
               <option value="AP">AP</option>
       </select>
-      <input type="text" placeholder="Zip Code">
+      <input type="text" placeholder="Zip Code" required>
       </div>
       <div><input type="text" placeholder="Telephone(Optional)"></div>
+      <input type="submit" value="CONTINUE TO PAYMENT">
     </form>
     <div class="summary">
       <p>order summary</p>
@@ -100,5 +101,4 @@
       <p>Return your products within 30 days of receipt for a full refund. Call us at 888-212-6855 and we'll take care of you.</p>
     </div>
   </div>
-  <button>continue to payment</button>
 </div>
