updateuser not working

--- a/public/views/cart/cart.html
+++ b/public/views/cart/cart.html
@@ -29,7 +29,7 @@
           </li>
         </ul>
       </div>
-      <p>subtotal <span>${{subtotal}}.00</span></p>
+      <p>subtotal <span>${{subtotal}}</span></p>
       <div>
         <button ng-click="checkSignIn()">checkout</button>
       </div>
