--- a/public/views/shipping/shipping.html
+++ b/public/views/shipping/shipping.html
@@ -93,10 +93,7 @@
         <br>shipping
         <br>tax
         <br>total</p>
-        <p>${{subtotal}}
-        <br>free
-        <br>${{tax}}
-        <br>${{total}}</p>
+        <p>${{subtotal}}<br>free<br>${{tax}}<br>${{total}}</p>
       </div>
       <p>Return your products within 30 days of receipt for a full refund. Call us at 888-212-6855 and we'll take care of you.</p>
     </div>
