--- a/public/views/profile/details.html
+++ b/public/views/profile/details.html
@@ -11,18 +11,21 @@
     <section class="details-name">
       <div class="show-view">
         <h6>name</h6>
-        <span></span>
+        <p>{{userData.user_name}}</p>
+        <span class="edit"></span>
       </div>
-      <form class="form-view">
+      <form class="form-view" ng-submit="updateUser()">
         <h6>name</h6>
-        <input type="text" placeholder="First Name">
-        <input type="text" placeholder="Last Name">
+        <input type="text" placeholder="First Name" ng-model="firstName">
+        <input type="text" placeholder="Last Name" ng-model="lastName">
         <input type="submit" value="save changes">
       </form>
     </section>
-    <section class="details-password">
+    <!-- <section class="details-password">
       <div class="show-view">
         <h6>password</h6>
+        <p></p>
+        <span class="edit"></span>
       </div>
       <form class="form-view">
         <h6>password</h6>
@@ -31,18 +34,19 @@
         <input type="text" placeholder="New password again">
         <input type="submit" value="save changes">
       </form>
-    </section>
-    <section class="details-name">
+    </section> -->
+    <section class="details-address">
       <div class="show-view">
         <h6>shipping information</h6>
+        <p></p>
       </div>
-      <form class="form-view">
+      <form class="form-view" ng-submit="updateUser()">
         <h6>shipping information</h6>
-        <input type="text" placeholder="Name">
-        <input type="text" placeholder="Address">
-        <input type="text" placeholder="Apt / Suite #">
-        <input type="text" placeholder="City">
-        <select name="shipping-state" id="shipping-state">
+        <input type="text" placeholder="Name" ng-model="userData.shipping_name">
+        <input type="text" placeholder="Address" ng-model="userData.shipping_address">
+        <input type="text" placeholder="Apt / Suite #" ng-model="userData.shipping_aptnum">
+        <input type="text" placeholder="City" ng-model="userData.shipping_city">
+        <select name="shipping-state" id="shipping-state" ng-model="userData.shipping_state">
           <option value="" disabled="" selected="">State</option>
                 <option value="AL">AL</option>
                 <option value="AK">AK</option>
@@ -104,9 +108,9 @@
                 <option value="AE">AE</option>
                 <option value="AP">AP</option>
         </select>
-        <input type="text" placeholder="Zip Code">
-        <input type="text" placeholder="Telephone">
-        <input type="submit" value="create new address">
+        <input type="text" placeholder="Zip Code"  ng-model="userData.shipping_zipcode">
+        <input type="text" placeholder="Telephone" ng-model="userData.shipping_tele">
+        <input type="submit" value="save changes">
       </form>
     </section>
   </div>
