--- a/public/views/shipping/shipping.scss
+++ b/public/views/shipping/shipping.scss
@@ -10,6 +10,8 @@
 }
 
 .shipping-container {
+  margin: 0 50px;
+
   h2 {
     font-size: 200%;
     padding: 30px 0;
@@ -31,18 +33,50 @@
     flex: 7;
 
     input {
-      width: 100%;
+      width: calc(100% - 4px);
       padding: 20px 0;
       font-size: 100%;
+      margin: 10px 0;
+    }
+
+    input[type="submit"] {
+      width: 323px;
+      padding: 15px 0;
+      background: #185674;
+      color: white;
+      font-weight: 900;
+      border-color: #185674;
+      border-radius: 5px;
+      letter-spacing: 0.1em;
+      margin: 50px 0;
     }
 
     .twoColumns {
-      // width: 704px;
       display: flex;
       justify-content: space-between;
 
       input {
-        width: 45%;
+        width: 48%;
+      }
+    }
+
+    .threeColumns {
+      display: flex;
+      justify-content: space-between;
+
+      input {
+        width: 32%;
+      }
+      select {
+        width: 32%;
+        height: 62px;
+        border-radius: 0;
+        margin: 10px 0;
+        font-size: 100%;
+        // color: #BFBFBF;
+        -webkit-border-radius: 0px;
+        -webkit-appearance: none;
+        background: white;
       }
     }
   }
@@ -52,4 +86,34 @@
 
 .summary {
   flex: 3;
+
+  > p:first-child {
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    margin-top: 10px;
+  }
+  > p:last-child {
+    font-size: 90%;
+    padding: 50px 0;
+    line-height: 2em;
+    color: #8c3a46;
+  }
+
+  .seperate {
+    display: flex;
+
+    p {
+      width: 50%;
+      color: #666666;
+      line-height: 2em;
+      text-transform: uppercase;
+      font-size: 90%;
+    }
+    p:first-child {
+      text-align: left;
+    }
+    p:last-child {
+      text-align: right;
+    }
+  }
 }
