--- a/public/views/shavePlans/shavePlans.html
+++ b/public/views/shavePlans/shavePlans.html
@@ -5,9 +5,9 @@
     <br>than $2 per blade. Start with a free trial, just
     <br>cover shipping.
   </p>
-  <start-trial-dir></start-trial-dir>
 </section>
 
+<div class="desc-container">
 <section class="descriptions">
   <div>
     <h5>Start for free.</h5>
@@ -25,9 +25,11 @@
       <br> plan from your profile page.</p>
   </div>
 </section>
+</div>
 
 <section class="works">
   <h1>What you get on a Shave Plan</h1>
+  <div class="card-container">
   <div class="works-card">
     <h6>Ships Today</h6>
     <h3>Try for Free</h3>
@@ -46,7 +48,7 @@
     <p>Judge the quality of our products for
       <br>yourself. Trial lasts about 2 weeks.</p>
   </div>
-  <start-trial-dir></start-trial-dir>
+  </div>
 </section>
 
 <section class="engineer">
@@ -64,18 +66,17 @@
         Delivers a crisp, comfortable shave
       </li>
     </ul>
-    <start-trial-dir></start-trial-dir>
   </div>
 </section>
 
 <section class="quality">
   <div class="quality-container">
-    <h2>Quality blades for half the price.</h2>
+    <h2>Quality blades for half
+      <br>the price.</h2>
     <p>We sell our blades to you directly from our
       <br>factory in Germany. No middlemen, no
       <br>upcharges. That's the Harry's way.
     </p>
-    <start-trial-dir></start-trial-dir>
   </div>
 </section>
 
@@ -89,7 +90,6 @@
       <br>produces millions of precision-honed blades
       <br>per year.
     </p>
-    <a>see our factory</a>
   </div>
 </section>
 
