--- a/public/directives/nav/nav.scss
+++ b/public/directives/nav/nav.scss
@@ -59,6 +59,38 @@ nav > ul {
   top: 5px;
   left: 50%;
 }
+
+.ham {
+  display: flex;
+  justify-content: space-between;
+
+  .fa-bars {
+    font-size: 25px;
+  }
+}
+
+.ham-dropdown {
+  width: 100%;
+  display: block;
+  text-align: center;
+  padding: 0;
+  position: absolute;
+  li {
+    width: 100%;
+    display: block;
+    cursor: pointer;
+    padding: 15px 0;
+    background: white !important;
+    margin: 0;
+    border-bottom: 1px solid #BFBFBF;
+  }
+  li:first-child {
+    border-top: 1px solid #BFBFBF;
+  }
+  // li > a {
+  //   display: block;
+  // }
+}
 .clear {
   clear: both;
 }
