--- a/public/views/cart/cart.scss
+++ b/public/views/cart/cart.scss
@@ -47,7 +47,7 @@
   text-transform: uppercase;
   display: flex;
   padding: 20px 0;
-  font-size: 90%;
+  font-size: 80%;
   border-top: 0.8px solid #BFBFBF;
   border-bottom: 0.8px solid #BFBFBF;
   text-align: right;
@@ -64,7 +64,7 @@
 .cart-detail {
   div > ul {
     display: flex;
-    font-size: 90%;
+    font-size: 80%;
     padding: 20px 0;
     border-bottom: 0.8px solid #BFBFBF;
     align-items: center;
@@ -79,7 +79,7 @@
     }
     li:nth-child(2) {
       flex: 4;
-      padding-left: 30px;
+      // margin-left: 30px;
       text-align: left;
       text-transform: uppercase;
     }
