--- a/public/views/payment/payment.scss
+++ b/public/views/payment/payment.scss
@@ -39,6 +39,15 @@
       text-transform: uppercase;
       color: #666666;
     }
+
+    .billing-address {
+      line-height: 2em;
+      text-transform: none;
+      border-top: 1px solid #666666;
+      border-bottom: 1px solid #666666;
+      padding: 20px 0;
+      letter-spacing: 0;
+    }
     > div {
       display: flex;
       justify-content: space-between;
