--- a/public/views/products/products.scss
+++ b/public/views/products/products.scss
@@ -30,11 +30,30 @@
     padding-bottom: 60px;
   }
 }
+.item-image {
+  // height: 320.45px;
+  // width: 320.45px;
+  // margin: auto;
+  // position: relative;
+}
 
 .item-image > a > img {
   width: 90%;
-  height: 90%;
+  // height: 320.45px;
+  // position: absolute;
+  // left: 0;
+  // right: 0;
+  // top: 0;
+  // bottom: 0;
 }
+// .item-image > a > img.ng-leave {
+//   -webkit-transition: 0.5s;
+//   transition: all 0.1s (1, 0, 1, 0);
+//   opacity: 1;
+// }
+// .item-image > a > img.ng-leave-active {
+//   opacity: 0;
+// }
 
 .item-info {
   padding: 15px 0;
